# sommelier_says

./: .gitignore  README.md  Wine Tasting Reviews.ipynb  app.py  data.dvc  eda_and_regression.ipynb  model1_points.h5  model2-points.h5  model3_points.h5  model4_points.h5  nlp_and_modeling.ipynb  pyproject.toml  requirements.txt  wine_tasting_reviews.ipynb  y_test_wine.csv
.streamlit/: config.toml
data/: .gitignore  winemag-data-130k-v2.csv.dvc
models/: .gitignore  model4_points.h5.dvc  wv_model200.model.dvc
notebooks/: eda_and_regression.ipynb  nlp_and_modeling.ipynb
sommelier_says/: data_processing.py
wine_prices/: data.py
