[tool.poetry]
name = "sommelier-says"
version = "0.1.0"
description = ""
authors = ["Elizabeth Oda <efeldeverd@gmail.com>"]
readme = "README.md"
packages = [{include = "sommelier_says"}]

[tool.poetry.dependencies]
python = "3.10.6"
numpy = "^1.23.4"
pandas = "^1.5.1"
dvc = "^2.33.0"
jupyter = "^1.0.0"
nltk = "^3.7"
scipy = "^1.9.3"
matplotlib = "^3.6.1"
sklearn = "^0.0"
tensorflow = "^2.10.0"
gensim = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
